fixed alignment

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -47,7 +47,7 @@ body {
   
   #main {
       float: right;
-      width: 85%;
+      width: 70%;
       margin-bottom: 20px;
   }
 
